; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/btrfs/extr_volumes.c_btrfs_grow_device.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/btrfs/extr_volumes.c_btrfs_grow_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.btrfs_trans_handle = type { i32 }
%struct.btrfs_device = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @btrfs_grow_device(%struct.btrfs_trans_handle* %0, %struct.btrfs_device* %1, i32 %2) #0 {
  %4 = alloca %struct.btrfs_trans_handle*, align 8
  %5 = alloca %struct.btrfs_device*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.btrfs_trans_handle* %0, %struct.btrfs_trans_handle** %4, align 8
  store %struct.btrfs_device* %1, %struct.btrfs_device** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.btrfs_device*, %struct.btrfs_device** %5, align 8
  %9 = getelementptr inbounds %struct.btrfs_device, %struct.btrfs_device* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @lock_chunks(i32 %10)
  %12 = load %struct.btrfs_trans_handle*, %struct.btrfs_trans_handle** %4, align 8
  %13 = load %struct.btrfs_device*, %struct.btrfs_device** %5, align 8
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @__btrfs_grow_device(%struct.btrfs_trans_handle* %12, %struct.btrfs_device* %13, i32 %14)
  store i32 %15, i32* %7, align 4
  %16 = load %struct.btrfs_device*, %struct.btrfs_device** %5, align 8
  %17 = getelementptr inbounds %struct.btrfs_device, %struct.btrfs_device* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @unlock_chunks(i32 %18)
  %20 = load i32, i32* %7, align 4
  ret i32 %20
}

declare dso_local i32 @lock_chunks(i32) #1

declare dso_local i32 @__btrfs_grow_device(%struct.btrfs_trans_handle*, %struct.btrfs_device*, i32) #1

declare dso_local i32 @unlock_chunks(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
